# idea-database

./: Cargo.toml  README.md
.cargo/: config.toml
.run/: upload-crates.sh
src/: core.rs  core_bak.rs  lib.rs
src/common/: model.rs  utils.rs
src/db/: mod.rs  mysql.rs  postgres.rs
